<resources>
    <string name="app_name">Dog Nutrition App</string>
    <string name="splash_text_main">PawPal</string>
    <string name="mainBtnText">Continue</string>
    <string name="loginForgotPassword">Forgot password?</string>
    <string name="loginBtn">LOGIN</string>
    <string name="registerBtn">REGISTER</string>
    <string name="registerText">Let\'s get you registered!</string>
    <string name="alreadyRegisteredText">Already registered? Login</string>
    <string name="tvRegisterUser">Not a User? Register Here</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_profile">Profile</string>
    <string name="loginText">Welcome, please log in!</string>
    <string name="home_test">Home</string>
    <string name="discover_test">Discover</string>
    <string name="profile_test">Profile Management</string>
</resources>