<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <ImageView
            android:layout_width="140dp"
            android:layout_height="99dp" app:srcCompat="@drawable/main_logo" android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp" app:layout_constraintHorizontal_bias="0.498"/>
    <FrameLayout
            android:layout_width="416dp"
            android:layout_height="318dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="208dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <EditText
                    android:layout_width="265dp"
                    android:layout_height="48dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/etPassword"
                    android:background="@drawable/text_box"
                    android:drawablePadding="8dp"
                    android:textAlignment="center"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:padding="12dp"
                    android:textColor="@color/gray"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etEmail"
                    android:layout_marginTop="32dp" android:hint="Password" android:textSize="14sp"
                    app:layout_constraintHorizontal_bias="0.503"/>
            <EditText
                    android:layout_width="265dp"
                    android:layout_height="48dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/etEmail"
                    android:background="@drawable/text_box"
                    android:drawablePadding="8dp"
                    android:textAlignment="center"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:padding="12dp"
                    android:textColor="@color/gray"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="60dp"
                    android:hint="Email Address" android:textSize="14sp" app:layout_constraintHorizontal_bias="0.503"/>
            <androidx.appcompat.widget.AppCompatButton
                    android:text="@string/loginBtn"
                    android:background="@drawable/button_selector"
                    android:drawablePadding="8dp"
                    android:layout_width="265dp"
                    android:layout_height="48dp" android:id="@+id/btnLogin"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.522"
                    app:layout_constraintTop_toBottomOf="@+id/etPassword" android:layout_marginTop="24dp"/>
            <TextView
                    android:text="@string/tvRegisterUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvRegister"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                    android:layout_marginTop="4dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    android:textColor="#FDB522"/>
            <TextView
                    android:text="@string/loginText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/etEmail" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold" android:textSize="18sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/progressBar"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>